# colorimetry-net

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-dev-serve.sh  netlify.toml  package.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: check.yml
HNB/: README.md  color analysis of HNB dye.ipynb  hnb_Mg_0mM.csv  hnb_Mg_4mM.csv  hnb_Mg_7mM.csv  hnb_Mg_8mM.csv  spectral analysis.ipynb
autocal/: Cargo.toml  README.md  webpack.config.js
autocal/src/: app.rs
autocal/static/: index.html
hnb-app/: Cargo.toml  README.md  index.html  package.json  webpack.config.js
hnb-app/src/: app.rs  image_container.rs  lib.rs  main.rs  transform_colors.rs
hnb-app/static/: index.html
netlify/: index.html  todomvc.js
site-base/: _cobalt.yml  index.md  style.scss
site-base/_layouts/: default.liquid
site-base/about/: index.md
site-base/app/: index.md
site-base/hnb-app/: index.md
site-base/impressum/: index.md
site-base/privacy/: index.md
src/: app.rs  lib.rs
static/: index.html  style.scss
