[package]
name = "colorswitch"
version = "0.0.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
# yew = "0.17"
yew = {git="https://github.com/yewstack/yew", rev="07dcbb9982c1e6228c7b519514bfc98b18ab8cfb"}
js-sys = "0.3"
palette = {version="0.5", default-features=false, features=["libm"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'ImageData',
  'Url',
]
