[package]
name = "autocal"
version = "0.0.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
repository = "https://github.com/colorimetry/colorimetry-net"
description = "digital image based colorimetry"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
js-sys = "0.3"
palette = {version="0.5", default-features=false, features=["libm"]}
git-version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'CanvasRenderingContext2d',
  'DataTransfer',
  'DragEvent',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'ImageData',
  'Url',
]
