[package]
name = "hnb-app"
version = "0.0.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
repository = "https://github.com/colorimetry/colorimetry-net"
description = "digital image based colorimetry"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.75"
wasm-logger = "0.2"
yew = "0.17"
js-sys = "0.3"
palette = {version="0.5", default-features=false, features=["libm"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Blob',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'DataTransfer',
  'DragEvent',
  'File',
  'HtmlAnchorElement',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'ImageData',
  'Url',
]
