[package]
name = "hnb-app"
version = "0.0.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
repository = "https://github.com/colorimetry/colorimetry-net"
description = "digital image based colorimetry"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-file = "0.3"
log = "0.4"
wasm-bindgen = "0.2.82"
wasm-logger = "0.2"
yew = { version = "0.21", default-features = false, features = ["csr"] }
js-sys = "0.3"
palette = { version = "0.5", default-features = false, features = ["libm"] }
uuid = { version = "1.7", default-features = false, features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'Blob',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'DataTransfer',
  'DragEvent',
  'File',
  'HtmlAnchorElement',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'ImageData',
  'Url',
]
